# kademlia-rs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  simple_test.sh  test_dht.sh
docs/: malicious_node_mitigation_plan.md  nat_traversal_plan.md
examples/: simple_node.rs
src/: error.rs  lib.rs  network.rs  node.rs  node_id.rs  protocol.rs  routing.rs  storage.rs  storage_sync.rs
src/error/: mod.rs
src/network/: mock.rs  mod.rs  node.rs  tcp.rs  udp.rs
src/node/: mod.rs
src/node_id/: mod.rs
src/protocol/: message.rs  mod.rs  operation.rs
src/routing/: k_bucket.rs  mod.rs  routing_table.rs
src/storage/: mod.rs
tests/: find_value_rpc_test.rs  mock_network_test.rs  multi_node_distribution_test.rs  node_connection_test.rs  node_failure_test.rs  store_and_retrieve_test.rs  tcp_network_test.rs  udp_network_test.rs
