[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"
authors = ["Kademlia Implementation"]
description = "A Rust implementation of the Kademlia distributed hash table"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sha2 = "0.10.8"
bytes = "1.5.0"
thiserror = "1.0.56"
async-trait = "0.1.77"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.20"
env_logger = "0.11.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.8.5"
futures = "0.3.30"
bincode = "1.3.3"
hex = "0.4.3"
clap = "2.33.3"

# No dev dependencies needed

[[example]]
name = "simple_node"
path = "examples/simple_node.rs"
